# Mediapipe-Hands-PyTorch

./: .gitignore  CLAUDE.md  LICENSE  PYPI_README.md  README.md  benchmark_all.py  compare_outputs.py  debug_pipeline.py  debug_tap_crop.py  debug_tap_detector.py  debug_tap_graph.py  executorch_export.py  executorch_run.py  mlx_graph.py  pyproject.toml  quantize_experiment.py  run_mediapipe.py  run_mediapipe_coreml.py  run_mediapipe_mlx.py  run_mediapipe_pytorch.py  run_webcam.py  run_webcam_mediapipe.py  tflite_graph.py  tflite_to_coreml.py  tflite_to_torch.py  verify_conversion.py
models/hand_detector.mlpackage/: Manifest.json
models/hand_detector_fp32.mlpackage/: Manifest.json
models/hand_detector_fp32.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/hand_landmarks_detector.mlpackage/: Manifest.json
models/hand_landmarks_detector.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/hand_landmarks_detector_fp32.mlpackage/: Manifest.json
models/hand_landmarks_detector_fp32.mlpackage/Data/com.apple.CoreML/: model.mlmodel
src/fasthands/: __init__.py  cli.py  coreml.py  pipeline.py  stream.py
src/fasthands/models/hand_detector.mlpackage/Data/com.apple.CoreML/: model.mlmodel
tests/: test_fasthands.py
