[project]
name = "fasthands"
version = "0.2.0"
description = "Fastest MediaPipe-compatible hand tracker: hand landmarks on the Apple Neural Engine at 0.7 ms/frame"
readme = "PYPI_README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Vimal Mollyn", email = "vmollyn@andrew.cmu.edu" }]
keywords = ["hand-tracking", "mediapipe", "coreml", "neural-engine", "hand-landmarks"]
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "coremltools>=8.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.urls]
Repository = "https://github.com/VimalMollyn/fasthands"

[project.scripts]
fasthands = "fasthands.cli:main"
fasthands-webcam = "fasthands.cli:webcam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fasthands"]

[tool.hatch.build.targets.sdist]
include = ["src", "PYPI_README.md", "LICENSE"]

[dependency-groups]
# research / verification tooling for this repo, not shipped with the package
dev = [
    "mediapipe>=0.10.35",
    "torch>=2.12.0",
    "ai-edge-litert>=2.1.5",
    "tflite>=2.18.0",
    "pytest>=8",
    "scikit-learn>=1.7.2",
]
